force-app/main/default/objects/Sale_Transaction__c/Sale_Transaction__c.object-meta.xml
<CustomObject>
    <label>Sale Transaction</label>
    <nameField>
        <displayFormat>ST-{0000000000}</displayFormat>
        <label>Sale Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>