force-app/main/default/objects/Sale_Transaction__c/fields/Book_Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Book_Service_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Book/Service Branch</label>
    <length>4</length>
    <type>Text</type>
</CustomField>