force-app/main/default/objects/Sale_Transaction__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>