force-app/main/default/objects/Sale_Transaction__c/fields/Deduct_Actual_Point__c.field-meta.xml
<CustomField>
    <fullName>Deduct_Actual_Point__c</fullName>
    <label>Deduct Actual Point</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>