force-app/main/default/objects/Sale_Transaction__c/fields/Deduct_Date__c.field-meta.xml
<CustomField>
    <fullName>Deduct_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deduct Date</label>
    <type>Date</type>
</CustomField>