force-app/main/default/objects/Sale_Transaction__c/fields/Deduct_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deduct_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deduct Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>