force-app/main/default/objects/Sale_Transaction__c/fields/Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>