force-app/main/default/objects/Sale_Transaction__c/fields/Indicator_Code_Level2__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Code_Level2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Code Level2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>