force-app/main/default/objects/Sale_Transaction__c/fields/Indicator_Level2__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Level2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Level2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>