force-app/main/default/objects/Sale_Transaction__c/fields/Indicator_Name__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>