force-app/main/default/objects/Sale_Transaction__c/fields/Indicator_Rank__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Rank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Rank</label>
    <length>10</length>
    <type>Text</type>
</CustomField>