force-app/main/default/objects/Sale_Transaction__c/fields/KPI_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KPI Date</label>
    <type>Date</type>
</CustomField>