force-app/main/default/objects/Sale_Transaction__c/fields/Reference_Number1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Number1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>