force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Name__c.field-meta.xml
<CustomField>
    <fullName>Sale_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>