force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Point_Engine__c.field-meta.xml
<CustomField>
    <fullName>Sale_Point_Engine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Point Engine</label>
    <length>10</length>
    <type>Text</type>
</CustomField>