force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Team__c.field-meta.xml
<CustomField>
    <fullName>Sale_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Team</label>
    <length>4</length>
    <type>Text</type>
</CustomField>