force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>