force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sale_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>