force-app/main/default/objects/Sale_Transaction__c/fields/Sale_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sale_Volume__c</fullName>
    <label>Sale Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>