force-app/main/default/objects/Sale_Transaction__c/fields/T_Performance_Team__c.field-meta.xml
<CustomField>
    <fullName>T_Performance_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T-Performance Team</label>
    <referenceTo>T_Performance_Team_List__c</referenceTo>
    <relationshipLabel>Sale Transactions</relationshipLabel>
    <relationshipName>Sale_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>