force-app/main/default/objects/Sale_Transaction__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>